Add Google Tests and enable GitHub Actions

--- a/QueueArrayRepresentation/CMakeLists.txt
+++ b/QueueArrayRepresentation/CMakeLists.txt
@@ -7,3 +7,17 @@ target_include_directories(
     ${PROJECT_NAME}-QueueArrayRepresentation PUBLIC
     .
 )
+
+add_executable(
+    QueueArrayRepresentationTest
+    tests/QueueArrayRepresentationTest.cpp
+)
+
+target_link_libraries(
+    QueueArrayRepresentationTest
+    ${PROJECT_NAME}-QueueArrayRepresentation
+    GTest::gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(QueueArrayRepresentationTest)
